--- a/doc/README.ps
+++ b/doc/README.ps
@@ -1,7 +1,7 @@
 %!PS-Adobe-2.0
 %%Creator: dvipsk 5.58f Copyright 1986, 1994 Radical Eye Software
 %%Title: README.dvi
-%%Pages: 4
+%%Pages: 5
 %%PageOrder: Ascend
 %%BoundingBox: 0 0 596 842
 %%DocumentFonts: Palatino-Roman Courier Palatino-Bold Palatino-Italic
@@ -10,7 +10,7 @@
 %DVIPSCommandLine: dvips -o /home/karsten/src/Projects/M/doc/README.ps
 %+ README.dvi
 %DVIPSParameters: dpi=300, compressed, comments removed
-%DVIPSSource:  TeX output 1998.08.16:1803
+%DVIPSSource:  TeX output 1998.08.17:2113
 %%BeginProcSet: texc.pro
 /TeXDict 250 dict def TeXDict begin /N{def}def /B{bind def}N /S{exch}N
 /X{S N}B /TR{translate}N /isls false N /vsize 11 72 mul N /hsize 8.5 72
@@ -207,18 +207,19 @@ end
 TeXDict begin 39158280 55380996 1000 300 300 (README.dvi)
 @start /Fa 143[37 3[20 6[30 37 21[50 5[50 19[30 2[30
 2[15 46[{ TeXBase1Encoding ReEncodeFont }9 59.999974
-/Palatino-Bold rf /Fb 136[36 6[25 22 1[39 14 6[19 1[20
-26[39 25[12 46[{ TeXBase1Encoding ReEncodeFont }9 50.000001
-/Palatino-Italic rf /Fc 103[30 31[30 30 30 30 30 30 30
+/Palatino-Bold rf /Fb 103[30 31[30 30 30 30 30 30 30
 1[30 30 30 30 30 30 30 30 30 30 30 30 30 30 30 30 19[30
 10[30 1[30 5[30 10[30 30 30 45[{ TeXBase1Encoding ReEncodeFont }31
-50.000001 /Courier rf /Fd 1 16 df<EA03F0EA0FFC487E487E481380A2B512C0A86C
-1380A26C13006C5A6C5AEA03F012147D9519>15 D E /Fe 134[28
+50.000001 /Courier rf /Fc 134[25 1[36 1[28 17 19 19 1[25
+22 28 39 14 22 1[14 3[19 1[20 1[22 11[39 12[39 25[12
+12[17 33[{ TeXBase1Encoding ReEncodeFont }20 50.000001
+/Palatino-Italic rf /Fd 1 16 df<EA03F0EA0FFC487E487E481380A2B512C0A86C13
+80A26C13006C5A6C5AEA03F012147D9519>15 D E /Fe 134[28
 26 42 28 30 16 21 20 28 30 27 29 44 14 28 12 14 29 28
 17 24 30 22 28 25 7[33 33 50 36 39 31 26 33 39 30 39
-41 47 30 36 1[17 41 38 28 30 39 35 30 39 1[22 4[12 25
+41 47 30 36 17 17 41 38 28 30 39 35 30 39 1[22 4[12 25
 25 2[25 25 25 25 25 1[30 12 17 12 2[17 17 14 5[14 30[30
-2[{ TeXBase1Encoding ReEncodeFont }67 50.000001 /Palatino-Roman
+2[{ TeXBase1Encoding ReEncodeFont }68 50.000001 /Palatino-Roman
 rf /Ff 136[60 1[44 24 32 28 1[44 40 44 64 24 2[24 44
 40 28 36 44 32 44 36 9[72 2[48 1[52 60 1[60 60 2[56 1[28
 1[60 40 1[60 2[56 1[32 8[36 36 36 36 36 36 3[24 18 2[24
@@ -232,10 +233,10 @@ rf /Fg 136[38 1[27 15 19 18 1[27 25 26 40 13 2[13 26
 36 36 1[36 3[36 36 36 1[36 30[36 1[36 17[36 36 45[{
  TeXBase1Encoding ReEncodeFont }20 59.999974 /Courier
 rf /Fj 3[36 134[36 19 25 24 2[33 35 1[17 3[35 33 1[29
-37 27 1[30 4[36 16[43 7[42 37 47 6[15 30 30 1[30 4[30
-7[20 20 40[{ TeXBase1Encoding ReEncodeFont }26 59.999974
-/Palatino-Roman rf /Fk 173[58 4[81 7[53 67 2[67 19[29
-45[{ TeXBase1Encoding ReEncodeFont }6 86.416689 /Palatino-Roman
+37 27 1[30 4[36 16[43 7[42 37 47 6[15 30 30 30 5[30 7[20
+20 40[{ TeXBase1Encoding ReEncodeFont }26 59.999974 /Palatino-Roman
+rf /Fk 173[58 4[81 7[53 67 2[67 19[29 45[{
+ TeXBase1Encoding ReEncodeFont }6 86.416689 /Palatino-Roman
 rf /Fl 178[81 77[{ .167 SlantFont TeXBase1Encoding ReEncodeFont }1
 86.416689 /Palatino-Roman rf end
 %%EndProlog
@@ -252,41 +253,42 @@ a4
 1 0 bop 645 407 a Fl(M)31 b Fk(-)22 b(README)85 556 y
 Fj(Karsten)15 b(Ball\374der)f(\\\\\()p Fi(Ballueder@usa.net)p
 Fj(\)\\\\Contact)g(us:)k Fi(m-developers@makelistcom)685
-676 y Fj(16th)d(August)h(1998)828 849 y Fh(Abstract)250
-925 y Fg(These)c(ar)o(e)g(the)g(r)o(elease)f(notes)h(for)g(M.)g(Some)f
-(mor)o(e)h(detailed)f(information)i(on)182 981 y(how)e(to)g(compile,)i
+676 y Fj(17th)d(August)h(1998)828 838 y Fh(Abstract)250
+903 y Fg(These)c(ar)o(e)g(the)g(r)o(elease)f(notes)h(for)g(M.)g(Some)f
+(mor)o(e)h(detailed)f(information)i(on)182 959 y(how)e(to)g(compile,)i
 (install)f(und)g(use)g(it)f(ar)o(e)g(in)h(the)g(Information)g(\002les.)
-250 1037 y(This)k(information)g(r)o(elates)f(to)g(the)g(\002rst)h
-(public)h(alpha)f(r)o(elease,)g(17.)26 b(August)182 1094
-y(1998.)60 1265 y Ff(1)72 b(W)-6 b(ARNING)16 b(-)h(this)h(is)f
-(\(pre-?\)alpha)60 1379 y Fe(When)d(you)h(do)g(a)g(lar)o(ge)f(fr)o(ee)g
+250 1016 y(This)k(information)g(r)o(elates)f(to)g(the)g(\002rst)h
+(public)h(alpha)f(r)o(elease,)g(17.)26 b(August)182 1072
+y(1998.)60 1242 y Ff(1)72 b(W)-6 b(ARNING)16 b(-)h(this)h(is)f
+(\(pre-?\)alpha)60 1356 y Fe(When)d(you)h(do)g(a)g(lar)o(ge)f(fr)o(ee)g
 (softwar)o(e)f(pr)o(oject,)j(you)e(have)h(two)f(choices:)21
-b(either)15 b(con-)60 1439 y(tinue)e(hacking)f(without)i(r)o(eleases)e
+b(either)15 b(con-)60 1416 y(tinue)e(hacking)f(without)i(r)o(eleases)e
 (and)h(risk)f(to)h(never)f(get)g(it)h(\002nished,)h(or)f(set)f
-(yourself)60 1500 y(a)f(r)o(elease)g(date,)i(no)e(matter)g(what)g(the)g
+(yourself)60 1476 y(a)f(r)o(elease)g(date,)i(no)e(matter)g(what)g(the)g
 (situation)i(is.)j(As)11 b(we)g(got)g(several)g(r)o(equests)g(fr)o(om)
-60 1560 y(people)18 b(who)f(want)g(to)g(play)h(with)f(it,)j(we)d
+60 1536 y(people)18 b(who)f(want)g(to)g(play)h(with)f(it,)j(we)d
 (decided)i(on)e(a)h(r)o(elease)f(date)h(and)f(did)i(our)60
-1620 y(best)14 b(to)h(get)f(it)h(into)g(a)g(working)e(shape.)22
+1597 y(best)14 b(to)h(get)f(it)h(into)g(a)g(working)e(shape.)22
 b(BUT)14 b(THIS)g(SOFTW)-5 b(ARE)15 b(IS)f(STILL)h(UNDER)60
-1680 y(DEVELOPMENT!)f(This)e(means)133 1782 y Fd(\017)24
+1657 y(DEVELOPMENT!)f(This)e(means)133 1748 y Fd(\017)24
 b Fe(it)13 b(is)g(incomplete)h(and)f(awkwar)o(d)e(to)i(use)133
-1881 y Fd(\017)24 b Fe(it)13 b(may)f(crash)g(occasionally)j(or)d(often)
-g(or)h(be)e(completely)j(unusable)60 1983 y(M)e(is)g(not)g(r)o(eady)g
-(for)f(the)h(end)g(user)f(yet,)h(but)g(we)f(pr)o(esent)g(it)i(in)f(its)
-g(curr)o(ent)g(state)g(to)g(give)60 2043 y(you)17 b(an)f(impr)o(ession)
-i(of)e(what)h(it)g(is)g(going)g(to)g(be.)28 b(W)-5 b(e)17
-b(also)g(hope)g(to)g(attract)g(a)f(bit)h(of)60 2103 y(attention)d(and)e
+1844 y Fd(\017)24 b Fe(it)17 b(may)e(crash)h(occasionally)i(or)e(often)
+g(or)f(be)h(completely)h(unusable)f(-)f Fc(Use)i(it)e(at)182
+1904 y(your)d(own)h(risk!)60 1995 y Fe(M)f(is)g(not)g(r)o(eady)g(for)f
+(the)h(end)g(user)f(yet,)h(but)g(we)f(pr)o(esent)g(it)i(in)f(its)g
+(curr)o(ent)g(state)g(to)g(give)60 2056 y(you)17 b(an)f(impr)o(ession)i
+(of)e(what)h(it)g(is)g(going)g(to)g(be.)28 b(W)-5 b(e)17
+b(also)g(hope)g(to)g(attract)g(a)f(bit)h(of)60 2116 y(attention)d(and)e
 (maybe)g(even)g(some)h(outside)h(help)e(for)g(it.)60
-2275 y Ff(2)72 b(Which)17 b(features)g(are)g(implemented?)60
-2389 y Fe(Quite)c(some)g(alr)o(eady)-6 b(,)13 b(but)g(mor)o(e)f(ar)o(e)
+2286 y Ff(2)72 b(Which)17 b(features)g(are)g(implemented?)60
+2399 y Fe(Quite)c(some)g(alr)o(eady)-6 b(,)13 b(but)g(mor)o(e)f(ar)o(e)
 g(still)i(missing.)j(What)12 b(we)g(have)h(so)f(far:)133
 2491 y Fd(\017)24 b Fe(Cr)o(oss-platform.)34 b(M)18 b(compiles)i(on)e
 (a)g(variety)h(of)f(Unix)g(systems)h(and)f(on)h(Mi-)182
 2551 y(cr)o(osoft)d(W)m(indows.)26 b(Use)15 b(one)h(mail)h(client,)h
 (no)d(matter)h(what)f(system)h(you)g(use.)182 2611 y(The)e(sour)o(ce)g
 (and)h(binary)f(for)g(W)m(indows)h(95/98/NT)f(ar)o(e)g(available)i(on)e
-(r)o(equest)182 2671 y(\()p Fc(m-developers@makelist.com)p
+(r)o(equest)182 2671 y(\()p Fb(m-developers@makelist.com)p
 Fe(\))o(.)31 b(Mailbox)19 b(\002le)g(formats)f(ar)o(e)g(the)g(same)182
 2731 y(on)13 b(both)f(platforms.)903 2856 y(1)p eop
 %%Page: 2 2
@@ -318,101 +320,109 @@ y Fd(\017)24 b Fe(Powerful)12 b(addr)o(ess)h(database)f(and)h(contact)g
 (formatted)g(messages.)133 1499 y Fd(\017)24 b Fe(Full)17
 b(internationalisation)j(support,)e(M)e(speaks)h(multiple)h(languages,)
 f(but)g(no)182 1559 y(translations)d(yet.)60 1732 y Ff(3)72
-b(Known)17 b(bugs)133 1846 y Fd(\017)24 b Fe(selection)11
-b(in)g(the)f(folder)g(view)h(sometimes)g(behaves)e(strange,)i
-(selecting)f(all)h(mes-)182 1906 y(sages)h(doesn't)h(work)133
-2008 y Fd(\017)24 b Fe(message)12 b(and)h(composition)h(view)f(don't)g
-(automatically)h(scr)o(oll)g(to)f(the)f(cursor)133 2109
-y Fd(\017)24 b Fe(tab)12 b(traversal)h(in)f(dialogs)i(doesn't)f(work)f
-(\(wxGTK)f(pr)o(oblem\))60 2282 y Ff(4)72 b(TODO,)17
-b(features)f(to)i(implement)60 2396 y Fe(This)f(is)g(a)f(list)i(of)e
-(featur)o(es)f(on)i(our)f(T)o(ODO)g(list)i(that)f(we)e(ar)o(e)h(curr)o
-(ently)h(working)e(on.)60 2457 y(Befor)o(e)d(adding)i(new)d(featur)o
-(es,)i(we'll)f(clean)h(up)g(a)f(few)f(things:)133 2571
-y Fd(\017)24 b Fe(First)18 b(comes)g(a)g(r)o(ewrite)g(of)g(the)g(class)
-g(hierar)o(chy)-6 b(.)33 b(For)17 b(better)h(modularisation)182
-2631 y(and)g(CORBA)g(support)f(\(Python)g(will)i(pr)o(o\002t)e(fr)o(om)
-g(this,)j(too.\),)g(we)c(will)j(clean)182 2691 y(up)14
-b(header)f(\002les)i(and)f(r)o(emove)g(some)g(inter)o(dependencies.)21
-b(GUI)13 b(and)i(non-GUI)903 2856 y(2)p eop
+b(Known)17 b(bugs)133 1846 y Fd(\017)24 b Fe(Folder)19
+b(cr)o(eation)g(dialog)h(doesn't)f(work)e(pr)o(operly)-6
+b(.)35 b(See)18 b(Information)h(\002le)g(for)182 1906
+y(how)12 b(to)h(setup)g(new)f(mail)h(folders.)133 2008
+y Fd(\017)24 b Fe(Selection)11 b(in)f(the)g(folder)f(view)h(sometimes)g
+(behaves)f(strange,)i(selecting)f(all)g(mes-)182 2068
+y(sages)i(doesn't)h(work.)133 2170 y Fd(\017)24 b Fe(Message)12
+b(and)h(composition)h(view)f(don't)g(automatically)h(scr)o(oll)g(to)f
+(the)f(cursor)l(.)133 2271 y Fd(\017)24 b Fe(T)-5 b(ab)12
+b(traversal)g(in)h(dialogs)h(doesn't)f(work)f(\(wxGTK)f(pr)o(oblem\).)
+60 2444 y Ff(4)72 b(TODO,)17 b(features)f(to)i(implement)60
+2558 y Fe(This)f(is)g(a)f(list)i(of)e(featur)o(es)f(on)i(our)f(T)o(ODO)
+g(list)i(that)f(we)e(ar)o(e)h(curr)o(ently)h(working)e(on.)60
+2618 y(Befor)o(e)d(adding)i(new)d(featur)o(es,)i(we'll)f(clean)h(up)g
+(a)f(few)f(things:)903 2856 y(2)p eop
 %%Page: 3 3
-3 2 bop 182 203 a Fe(code)11 b(will)h(be)e(better)g(separated,)i(class)
-f(implementations)i(and)e(interface)f(de\002ni-)182 264
-y(tions)i(will)g(be)f(sorted)h(out)g(mor)o(e)f(clearly)-6
-b(.)16 b(This)11 b(includes)i(a)e(common)h(base)e(object)182
-324 y(with)j(r)o(efer)o(ence)e(couting.)133 424 y Fd(\017)24
-b Fe(Plug)13 b(the)f(\(very)g(few)f(r)o(emaining\))h(memory)g(holes.)60
-534 y(Then)g(we)h(\002x)g(some)g(GUI)g(issues.)18 b(Many)13
-b(of)g(these)g(depend)h(on)f(wxGTK)f(which)h(is)h(still)60
-594 y(evolving)f(speedily)-6 b(.)133 703 y Fd(\017)24
-b Fe(add)13 b(keyboar)o(d)f(accelerators)g(and)h(pr)o(oper)f(tab)g
-(traversal)133 804 y Fd(\017)24 b Fe(add)13 b(a)g(context)f(sensitive)i
-(help)f(system)133 905 y Fd(\017)24 b Fe(add)13 b(mor)o(e)f(dialogs)i
-(and)f(a)f(tr)o(ee)h(contr)o(ol)g(for)f(folder)h(selection)60
-1014 y(After)f(that)g(we)g(r)o(each)g(the)h(list)h(of)e(serious)h(impr)
-o(ovements:)133 1124 y Fd(\017)24 b Fe(Better)18 b(Python)f(support.)31
-b(W)-5 b(e)18 b(have)f(some)h(callbacks)g(in)g(place,)h(but)e(after)g
-(the)182 1184 y(class)i(hierar)o(chy)g(r)o(ewrite)f(we)g(have)g(to)h
-(generate)f(new)g(interface)h(\002les)g(for)f(the)182
-1244 y(complete)h(class)f(hierar)o(chy)-6 b(.)32 b(Also)19
-b(by)e(this)i(time)f(wxPython)g(might)g(be)f(integ-)182
-1304 y(rated,)f(so)e(we)g(can)h(actually)g(write)g(some)g(of)f(the)h
-(con\002guration)g(dialogs)h(in)f(py-)182 1364 y(thon)e(which)f(should)
-i(speed)f(things)g(up.)j Fb(Help)c(welcome.)133 1465
+3 2 bop 133 203 a Fd(\017)24 b Fe(First)18 b(comes)g(a)g(r)o(ewrite)g
+(of)g(the)g(class)g(hierar)o(chy)-6 b(.)33 b(For)17 b(better)h
+(modularisation)182 264 y(and)g(CORBA)g(support)f(\(Python)g(will)i(pr)
+o(o\002t)e(fr)o(om)g(this,)j(too.\),)g(we)c(will)j(clean)182
+324 y(up)14 b(header)f(\002les)i(and)f(r)o(emove)g(some)g(inter)o
+(dependencies.)21 b(GUI)13 b(and)i(non-GUI)182 384 y(code)c(will)h(be)e
+(better)g(separated,)i(class)f(implementations)i(and)e(interface)f
+(de\002ni-)182 444 y(tions)i(will)g(be)f(sorted)h(out)g(mor)o(e)f
+(clearly)-6 b(.)16 b(This)11 b(includes)i(a)e(common)h(base)e(object)
+182 504 y(with)j(r)o(efer)o(ence)e(couting.)133 606 y
+Fd(\017)24 b Fe(Plug)13 b(the)f(\(appar)o(ently)g(very)g(few)f(r)o
+(emaining\))i(memory)e(holes.)60 718 y(Then)h(we)h(\002x)g(some)g(GUI)g
+(issues.)18 b(Many)13 b(of)g(these)g(depend)h(on)f(wxGTK)f(which)h(is)h
+(still)60 778 y(evolving)f(speedily)-6 b(.)133 890 y
+Fd(\017)24 b Fe(add)13 b(keyboar)o(d)f(accelerators)g(and)h(pr)o(oper)f
+(tab)g(traversal)133 991 y Fd(\017)24 b Fe(add)13 b(a)g(context)f
+(sensitive)i(help)f(system)133 1093 y Fd(\017)24 b Fe(add)13
+b(mor)o(e)f(dialogs)i(and)f(a)f(tr)o(ee)h(contr)o(ol)g(for)f(folder)h
+(selection)60 1205 y(After)f(that)g(we)g(r)o(each)g(the)h(list)h(of)e
+(serious)h(impr)o(ovements:)133 1317 y Fd(\017)24 b Fe(Better)18
+b(Python)f(support.)31 b(W)-5 b(e)18 b(have)f(some)h(callbacks)g(in)g
+(place,)h(but)e(after)g(the)182 1377 y(class)i(hierar)o(chy)g(r)o
+(ewrite)f(we)g(have)g(to)h(generate)f(new)g(interface)h(\002les)g(for)f
+(the)182 1437 y(complete)h(class)f(hierar)o(chy)-6 b(.)32
+b(Also)19 b(by)e(this)i(time)f(wxPython)g(might)g(be)f(integ-)182
+1498 y(rated,)f(so)e(we)g(can)h(actually)g(write)g(some)g(of)f(the)h
+(con\002guration)g(dialogs)h(in)f(py-)182 1558 y(thon)e(which)f(should)
+i(speed)f(things)g(up.)j Fc(Help)c(welcome.)133 1659
 y Fd(\017)24 b Fe(Full)10 b(Drag)e(and)i(Dr)o(op)f(interaction)i(with)f
-(\002lemanagers)f(of)g(W)m(indows)h(and)g(Gnome)182 1525
+(\002lemanagers)f(of)g(W)m(indows)h(and)g(Gnome)182 1719
 y(\(will)j(be)f(added)h(r)o(eal)g(soon,)g(easy\).)133
-1626 y Fd(\017)24 b Fe(Easy)13 b(to)f(use)h(\002ltering)g(system)f(for)
-g(mails.)133 1726 y Fd(\017)24 b Fe(Support)13 b(for)e(V)l(-car)o(ds.)
-133 1827 y Fd(\017)24 b Fe(Nested)13 b(mail)h(folder)e(hierar)o(chy)-6
-b(.)133 1927 y Fd(\017)24 b Fe(Spam-Ex)12 b(spam)g
-(\002ghting/auto-complaint)j(function.)133 2028 y Fd(\017)24
+1820 y Fd(\017)24 b Fe(Easy)13 b(to)f(use)h(\002ltering)g(system)f(for)
+g(mails.)133 1922 y Fd(\017)24 b Fe(Support)13 b(for)e(V)l(-car)o(ds.)
+133 2023 y Fd(\017)24 b Fe(Nested)13 b(mail)h(folder)e(hierar)o(chy)-6
+b(.)133 2124 y Fd(\017)24 b Fe(Spam-Ex)12 b(spam)g
+(\002ghting/auto-complaint)j(function.)133 2225 y Fd(\017)24
 b Fe(Richt-text)13 b(editing)h(and)f(HTML)g(mail)g(support)133
-2128 y Fd(\017)24 b Fe(Support)13 b(for)e(PGP)i(and)g(GNU)g(Privacy)f
-(Guar)o(d)h(to)g(encrypt)f(mails.)133 2229 y Fd(\017)24
+2327 y Fd(\017)24 b Fe(Support)13 b(for)e(PGP)i(and)g(GNU)g(Privacy)f
+(Guar)o(d)h(to)g(encrypt)f(mails.)133 2428 y Fd(\017)24
 b Fe(Thr)o(eading)12 b(of)g(messages)g(and)h(pr)o(oper)f(usenet)h(news)
-f(support.)133 2329 y Fd(\017)24 b Fe(Compr)o(ession)13
-b(of)g(mail)g(folders.)133 2430 y Fd(\017)24 b Fe(Delay-Folder)12
+f(support.)133 2529 y Fd(\017)24 b Fe(Compr)o(ession)13
+b(of)g(mail)g(folders.)133 2630 y Fd(\017)24 b Fe(Delay-Folder)12
 b(to)h(keep)f(mails)h(and)g(r)o(e-pr)o(esent)e(them)i(at)f(a)h(later)f
-(date.)133 2530 y Fd(\017)24 b Fe(Context)13 b(sensitive)h(help)e
-(system)h(\(HTML)g(based\).)133 2631 y Fd(\017)24 b Fe(T)l(ranslations)
-13 b(to)f(German,)h(Fr)o(ench)f(and)g(Italian.)133 2731
-y Fd(\017)24 b Fe(W)m(ide)13 b(character)f(\(Unicode\))h(support)f(and)
-h(other)f(character)g(sets.)903 2856 y(3)p eop
+(date.)133 2731 y Fd(\017)24 b Fe(Context)13 b(sensitive)h(help)e
+(system)h(\(HTML)g(based\).)903 2856 y(3)p eop
 %%Page: 4 4
-4 3 bop 133 203 a Fd(\017)24 b Fe(Import,)15 b(export)f(and)h(synchr)o
-(onisation)g(with)g(other)f(pr)o(ograms')g(addr)o(ess)h(data-)182
-264 y(bases.)133 365 y Fd(\017)24 b Fe(V)-6 b(oice)13
-b(mail.)133 467 y Fd(\017)24 b Fe(Mor)o(e)12 b(Python)h(support)g(thr)o
-(ough)f(wxPython.)133 569 y Fd(\017)24 b Fe(Support)d(for)g(Drag)f(and)
-h(Dr)o(op)g(interaction)h(with)g(KDE,)g(once)f(that)h(wxQt)e(is)182
-629 y(available.)133 731 y Fd(\017)k Fe(CORBA)13 b(support,)g(possible)
-h(cooperation)f(with)g(PINN)g(pr)o(oject.)133 832 y Fd(\017)24
-b Fe(ANY)13 b(OTHER)g(SUGGESTION)60 983 y Fa(4.1)59 b(Help)15
-b(Needed)60 1078 y Fe(As)i(you)f(can)h(see,)h(we)e(have)h(big)f(plans)h
-(for)f(M.)h(T)-5 b(o)17 b(achieve)g(all)h(this,)h(we)d(need)h(some)60
-1138 y(help.)f(Ar)o(eas)c(wher)o(e)g(we)f(would)j(use)e(some)h(help)f
-(ar)o(e)133 1253 y Fd(\017)24 b Fe(Python)133 1354 y
-Fd(\017)g Fe(support)13 b(for)e(further)h(mail)h(pr)o(otocols,)h(LDAP)
-133 1456 y Fd(\017)24 b Fe(The)17 b(wxQt)g(pr)o(oject,)i(a)f(port)g(of)
-f(wxW)m(indows)h(to)g(the)g(Qt)g(toolkit,)j(will)d(also)h(be)182
-1516 y(happy)d(for)g(any)g(help.)28 b(W)-5 b(e)16 b(ar)o(e)g(not)h(dir)
-o(ectly)h(involved)g(in)f(this,)i(but)d(being)g(in-)182
-1576 y(volved)e(with)e(wxW)m(indows,)h(we)f(ar)o(e)g(happy)g(to)h
-(support)g(that)f(port.)133 1678 y Fd(\017)24 b Fe(If)12
-b(you)g(have)g(access)g(to)h(other)f(systems)h(apart)f(fr)o(om)g
-(Linux/Solaris/W)m(indows,)182 1738 y(you)j(ar)o(e)g(very)f(welcome)i
-(to)f(help)h(us)f(port)g(M)h(to)f(those)h(platforms,)g(or)f(to)h(other)
-182 1798 y(har)o(dwar)o(e)c(than)g(Intel.)60 1971 y Ff(5)72
-b(Online)17 b(resources)133 2085 y Fd(\017)24 b Fe(M)13
-b(has)f(a)g(homepage)g(at)h Fc(http://Ballueder.home.ml.org/M)o(/)133
-2187 y Fd(\017)24 b Fe(The)9 b(wxW)m(indows)g(homepage)g(is)h
-Fc(http://web.ukonline.co.uk/julian.sm)o(art/)133 2289
+4 3 bop 133 203 a Fd(\017)24 b Fe(T)l(ranslations)13
+b(to)f(German,)h(Fr)o(ench)f(and)g(Italian.)133 305 y
+Fd(\017)24 b Fe(W)m(ide)13 b(character)f(\(Unicode\))h(support)f(and)h
+(other)f(character)g(sets.)133 407 y Fd(\017)24 b Fe(Import,)15
+b(export)f(and)h(synchr)o(onisation)g(with)g(other)f(pr)o(ograms')g
+(addr)o(ess)h(data-)182 467 y(bases.)133 569 y Fd(\017)24
+b Fe(V)-6 b(oice)13 b(mail.)133 670 y Fd(\017)24 b Fe(Mor)o(e)12
+b(Python)h(support)g(thr)o(ough)f(wxPython.)133 772 y
+Fd(\017)24 b Fe(Support)d(for)g(Drag)f(and)h(Dr)o(op)g(interaction)h
+(with)g(KDE,)g(once)f(that)h(wxQt)e(is)182 832 y(available.)133
+934 y Fd(\017)k Fe(CORBA)13 b(support,)g(possible)h(cooperation)f(with)
+g(PINN)g(pr)o(oject.)133 1036 y Fd(\017)24 b Fe(Addr)o(ess)13
+b(datbase)f(synchr)o(onisation)i(with)f(PDA)l('s)f(\(Just)g(got)h
+(one...\))133 1137 y Fd(\017)24 b Fe(ANY)13 b(OTHER)g(SUGGESTION)60
+1288 y Fa(4.1)59 b(Help)15 b(Needed)60 1383 y Fe(As)i(you)f(can)h(see,)
+h(we)e(have)h(big)f(plans)h(for)f(M.)h(T)-5 b(o)17 b(achieve)g(all)h
+(this,)h(we)d(need)h(some)60 1443 y(help.)f(Ar)o(eas)c(wher)o(e)g(we)f
+(would)j(use)e(some)h(help)f(ar)o(e)133 1558 y Fd(\017)24
+b Fe(Python)133 1659 y Fd(\017)g Fe(support)13 b(for)e(further)h(mail)h
+(pr)o(otocols,)h(LDAP)133 1761 y Fd(\017)24 b Fe(The)17
+b(wxQt)g(pr)o(oject,)i(a)f(port)g(of)f(wxW)m(indows)h(to)g(the)g(Qt)g
+(toolkit,)j(will)d(also)h(be)182 1821 y(happy)d(for)g(any)g(help.)28
+b(W)-5 b(e)16 b(ar)o(e)g(not)h(dir)o(ectly)h(involved)g(in)f(this,)i
+(but)d(being)g(in-)182 1881 y(volved)e(with)e(wxW)m(indows,)h(we)f(ar)o
+(e)g(happy)g(to)h(support)g(that)f(port.)133 1983 y Fd(\017)24
+b Fe(If)12 b(you)g(have)g(access)g(to)h(other)f(systems)h(apart)f(fr)o
+(om)g(Linux/Solaris/W)m(indows,)182 2043 y(you)j(ar)o(e)g(very)f
+(welcome)i(to)f(help)h(us)f(port)g(M)h(to)f(those)h(platforms,)g(or)f
+(to)h(other)182 2103 y(har)o(dwar)o(e)c(than)g(Intel.)60
+2277 y Ff(5)72 b(Online)17 b(resources)133 2391 y Fd(\017)24
+b Fe(M)13 b(has)f(a)g(homepage)g(at)h Fb
+(http://Ballueder.home.ml.org/M)o(/)133 2492 y Fd(\017)24
+b Fe(The)9 b(wxW)m(indows)g(homepage)g(is)h Fb
+(http://web.ukonline.co.uk/julian.sm)o(art/)133 2594
 y Fd(\017)24 b Fe(wxGTK,)9 b(the)g(GTK)h(port)f(of)g(wxW)m(indows,)i
-(is)f(available)g(fr)o(om)f Fc(http://www.freiburg.linux.de/\230wxxt)o
-(/)60 2462 y Ff(6)72 b(F)l(AQ)60 2576 y Fe(Ther)o(e)11
+(is)f(available)g(fr)o(om)f Fb(http://www.freiburg.linux.de/\230wxxt)o
+(/)903 2856 y Fe(4)p eop
+%%Page: 5 5
+5 4 bop 60 204 a Ff(6)72 b(F)l(AQ)60 318 y Fe(Ther)o(e)11
 b(will)j(be)e(some)g(after)g(this)h(r)o(elease)g(-)f(sur)o(ely)-6
-b(.)903 2856 y(4)p eop
+b(.)903 2856 y(5)p eop
 %%Trailer
 end
 userdict /end-hook known{end-hook}if
