Works under wxGTK again.

--- a/doc/Information.lyx
+++ b/doc/Information.lyx
@@ -1,4 +1,4 @@
-#This file was created by <karsten> Mon Aug 17 20:11:22 1998
+#This file was created by <karsten> Mon Aug 24 19:49:54 1998
 #LyX 0.12 (C) 1995-1998 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
@@ -29,7 +29,7 @@
 \shape slanted 
 M
 \shape default 
- - Introduction
+ - General Information
 \layout Author
 
 Karsten Ballüder
