--- a/TODO
+++ b/TODO
@@ -3,6 +3,10 @@ $Id$
 
 *** things to fix/implement next ***
 
+--!!! do not use wxConfig derived classes anywhere except in Profile.cpp
+
+- wxOptionsDlg: two conversions from (long) to (int) .... is that ok?
+
 - wxLayout:
   + fix wxGTK postscript printing which is pretty broken, compare with wxXt?
     + check printing example
