now swig handling should be fine, with proper detection whether it's to be used or not

--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@ $Id$
 
 *** things to fix/implement next ***
 
+- test sl5/slx abiguity in c-client: use -lshadow on libc5 and -lcrypt on glibc2?
+
 - wxOptionsDlg: two conversions from (long) to (int) .... is that ok?
   + should have "restore defaults", would be nice to be able to do it for
     one setting only (and not for all of them which is trivial)
