--- a/TODO
+++ b/TODO
@@ -10,6 +10,9 @@ $Id$
 - reply mail does not quote original mail but inserts junk
 - reply/forward buttons for messageview/folderview
 - Preferences editor should mail oneself for test
+- make icons in AdbEdit transparent
+- make AdbEdit textctrl accept pasted text
+- make AdbEdit auto-generate a formatted name from first/family-name and prefix/title.
 
 - wxOptionsDlg: two conversions from (long) to (int) .... is that ok?
   + should have "restore defaults", would be nice to be able to do it for
